New design/layout, minor updates, cleanup.

--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -38,22 +38,31 @@ layout: compress
                         m:
                     </div>
                     <div class="td">
-                        (+44) 079 066 868 57
+                        +44 (0) 790 66 86 857
                     </div>
                     <div class="clear"></div>
                 </div>
                 <div class="internet">
-                    <a href="mailto:contact@marcuscraske.com">contact@marcuscraske.com</a>
+                    <a href="mailto:contact@marcuscraske.com">
+                        contact@marcuscraske.com
+                    </a>
                 </div>
                 <div class="address">
-                    <a href="https://marcus.engineer">https://marcus.engineer</a>
+                    <a href="https://marcus.engineer">
+                        https://marcus.engineer
+                    </a>
+                </div>
+                <div class="location">
+                    London, UK
                 </div>
                 <div class="clear"></div>
             </div>
 
             <div class="section first">
                 <div class="header">
-                    <h2>Experience</h2>
+                    <h2>
+                        Professional Experience
+                    </h2>
                 </div>
                 <div class="content">
                     <div class="item">
@@ -64,20 +73,30 @@ layout: compress
                             <b>Worldpay / FIS</b> - <i>Principal Software Engineer - promoted December 2019,</i><br />
                             <i>Senior Software Engineer - promoted November 2015,</i><br />
                             <i>Software Engineer</i><br />
-                            Working on HPP (Hosted Payment Pages) platform, the next generation of payment pages for online
-                            commerce. Supporting multiple languages, currencies, international alternative payment methods
-                            and card schemes. Processing high volumes of transactions, in the billions annually. Used by
-                            well-known retailers, corporates, government agencies and smaller businesses.<br />
-                            <br />
-                            Technical lead working with the business (product manager, project owner, service owners,
-                            enterprise architecture, enterprise security, other teams, etc) to implement projects, release
-                            lead, defining release process and SDLC, mentoring, department presentations, shifting
-                            platform from proprietary licensing to save costs, code reviews, high-level designs,
+                            Working on strategic gateways, and primarily on the HPP (Hosted Payment Pages) platform, used by
+                            shoppers all around the world for taking online card and alternative payment method (APM)
+                            payments. Supporting multiple languages, currencies, international alternative payment methods,
+                            card schemes, end-user devices. Working in a highly regulated environment
+                            (PCI-DSS, SCA/PSD2, FCA, WCAG, GDPR etc).
+                            Processing high volumes of transactions, in the billions annually. Used by
+                            well-known retailers, corporates, government agencies and smaller businesses.
+                            <br /><br />
+                            Technical lead, working with: senior leadership (directors and c-suite) and
+                            the wider business
+                            (product manager, project owner, service owners, enterprise architecture, enterprise security, technical teams,
+                            business departments, etc).
+                            <br /><br />
+                            Building distributed microservice architectures, designing long-running strategic projects,
+                            leading releases, architecture,
+                            defining release process and SDLC, mentoring, department presentations,
+                            optimising platform costs, code reviews, high-level designs,
                             platform security, interviewing candidates, improving interview process,
-                            running training sessions with various teams, platform architecture, on-call production support.<br />
+                            running training sessions with various teams, platform architecture, on-call production support,
+                            presentations.<br />
                             <br />
-                            Using Java 11, Spring Boot, Kubernetes, Docker containers, AWS, OpenShift, Ansible, historically
-                            Oracle stack (Weblogic, DB, Coherence), Fastly, Angular and much more.<br />
+                            <i>Using:<i/> Java 17, Spring Boot, Kubernetes, Docker containers, AWS (S3, DynamoDB, RDS/Aurora),
+                            OpenShift, Terraform, React, JavaScript, TypeScript, JSON, OpenAPI.
+                            Historically: JAXB / SOAP, Oracle (Weblogic, DB, Coherence), Ansible, Fastly, Angular and much more.<br />
                             <br />
                             Experience with working on legacy gateway, mission critical, high-throughput systems. Migrating
                             legacy systems. Based in team using Scaled Agile (SaFE), transformed from Scrum to Kanban,
@@ -118,17 +137,19 @@ layout: compress
 
             <div class="section">
                 <div class="header">
-                    <h2>Technical Skills</h2>
+                    <h2>
+                        Technical Skills
+                    </h2>
                 </div>
                 <div class="content">
                     <div class="item">
                         <div class="text">
-                            <b>Languages</b> - Java, JavaScript, TypeScript, C#, C/C++ (inc. 11), Matlab.
+                            <b>Languages</b> - Java, JavaScript, TypeScript, C#, C/C++, Matlab.
                         </div>
                     </div>
                     <div class="item">
                         <div class="text">
-                            <b>Platforms</b> - Mac, Linux (Arch, Debian, Ubuntu), Windows, Raspberry Pi, ARM Cortex M, Verifone VX 820 PoS PED.
+                            <b>Platforms</b> - Mac, Linux (Debian, Arch, Ubuntu), Windows, Raspberry Pi, ARM Cortex M, Verifone VX 820 PoS PED.
                         </div>
                     </div>
                     <div class="item">
@@ -146,7 +167,7 @@ layout: compress
                     <div class="item">
                         <div class="text">
                             <b>Misc.</b> - Amazon Web Services (AWS), Git, Jenkins,
-                            SQL (Oracle, MySQL, Postgres, MS SQL), Mongo, Spring Boot, JVisualVM,
+                            SQL (Oracle, MySQL, Postgres/PostgreSQL, MS SQL), Mongo, Spring Boot, JVisualVM,
                             OpenGL, Java EE, Glassfish, Tomcat, Resource Adapters, JMS, Hibernate,
                             JUnit, Mockito, Docker, Maven, Checkstyle, Ant, dependency injection,
                             Agile / Scrum / Kanban / Scaled Agile / SaFE,
@@ -160,7 +181,9 @@ layout: compress
 
             <div class="section">
                 <div class="header">
-                    <h2>Education</h2>
+                    <h2>
+                        Education
+                    </h2>
                 </div>
                 <div class="content">
                     <div class="item">
@@ -188,7 +211,9 @@ layout: compress
 
             <div class="section">
                 <div class="header">
-                    <h2>Third Year Project</h2>
+                    <h2>
+                        Third Year Project
+                    </h2>
                 </div>
                 <div class="content">
                     <div class="item">
@@ -205,17 +230,11 @@ layout: compress
 
             <div class="section">
                 <div class="header">
-                    <h2>Awards</h2>
+                    <h2>
+                        Awards
+                    </h2>
                 </div>
                 <div class="content">
-                    <div class="item">
-                        <div class="time">
-                            2014
-                        </div>
-                        <div class="text">
-                            <i>Proxama Award - October - Talent</i>
-                        </div>
-                    </div>
                     <div class="item">
                         <div class="time">
                             2014
