--- a/website/projects.html
+++ b/website/projects.html
@@ -5,7 +5,7 @@ selected: projects
 ---
 
 <p>
-    Below are some of my public projects, from my free time, and a few others can be found on my
+    Most of my projects are now commercial, and either unlisted or closed-source. And some can be found on my
     <a href="https://github.com/marcuscraske?tab=repositories">Github</a>.
 </p>
 
