QCON 2k23 article, general cleanup.

--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -81,7 +81,7 @@ layout: compress
                             Processing high volumes of transactions, in the billions annually. Used by
                             well-known retailers, corporates, government agencies and smaller businesses.
                             <br /><br />
-                            Technical lead, working with: senior leadership (directors and c-suite) and
+                            Technical lead, experience working with: senior leadership (directors and c-suite) and
                             the wider business
                             (product manager, project owner, service owners, enterprise architecture, enterprise security, technical teams,
                             business departments, etc).
