--- a/website/projects.html
+++ b/website/projects.html
@@ -5,7 +5,10 @@ selected: projects
 ---
 
 <p>
-    Most of my projects are now commercial, and either unlisted or closed-source. And some can be found on my
+    Most of my projects are now commercial, and either unlisted or closed-source.
+</p>
+<p>
+    And some can be found on my
     <a href="https://github.com/marcuscraske?tab=repositories">Github</a>.
 </p>
 
