Header background, layout tweaks, more updates.

--- a/website/cv/index.html
+++ b/website/cv/index.html
@@ -72,7 +72,7 @@ layout: compress
                             <i>Senior Software Engineer - promoted November 2015,</i><br />
                             <i>Software Engineer</i><br />
                             Working on payment gateways, and primarily on the HPP (Hosted Payment Pages) platform, used by
-                            shoppers all around the world.
+                            shoppers worldwide.
                             Processing high volumes of transactions, in the billions annually. Used by
                             well-known retailers, corporates, government agencies and smaller businesses.
                             Processing online card and alternative payment method (APM)
