Fix for inf scroll.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ hideHeader: true
     <div class="pagination">
 
         {% if paginator.previous_page %}
-            <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+            <a href="{{ paginator.previous_page_path }}/" class="previous">Previous</a>
         {% else %}
             <span class="previous">Previous</span>
         {% endif %}
@@ -61,7 +61,7 @@ hideHeader: true
         <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
 
         {% if paginator.next_page %}
-            <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+            <a href="{{ paginator.next_page_path }}/" class="next">Next</a>
         {% else %}
             <span class="next ">Next</span>
         {% endif %}
